--- a/.github/workflows/mathop_workflow_with_parameters.yml
+++ b/.github/workflows/mathop_workflow_with_parameters.yml
@@ -1,4 +1,4 @@
-name: Math Operations Workflow With Params
+name: Math Operations Workfw With Params
 on:
   push:
 
@@ -16,6 +16,6 @@ jobs:
           # Optional - x64 or x86 architecture, defaults to x64
           architecture: 'x64'
       # You can test your matrix by printing the current Python version
-      - name: Display Python version
-        run: python -c "import sys; print(sys.version)"
+      - name: Greeting
+        run: python -c "print('hello')"
 
