--- a/.github/workflows/mathop_workflow_with_parameters.yml
+++ b/.github/workflows/mathop_workflow_with_parameters.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python
+      - name: pn setup
         # This is the version of the action for setting up Python, not the Python version.
         uses: actions/setup-python@v4
         with:
